[package]
name = "crusty-cache"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "3"
members = ["memory"]
exclude = ["_roadmap_"]

[[bin]]
path = "src/main.rs"
name = "crusty-cache"

[profile.dev]
codegen-units = 16
debug = true
incremental = false
lto = false
opt-level = 0
panic = "unwind"
strip = false

[profile.release]
codegen-units = 1
debug = 0
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true

[workspace.dependencies]
dashmap = { version = "6.1.0", features = ["serde"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.139" }
tokio = { version = "1.41.1", features = ["full"] }

[dependencies]
memory = { path = "memory" }
