[package]
name = "crusty-cache"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "crusty-cache"

[profile.dev]
codegen-units = 16
debug = true
incremental = false
lto = false
opt-level = 0
panic = "unwind"
strip = false

[profile.release]
codegen-units = 1
debug = 0
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true

[dependencies]
clap = { version = "4.5.31", features = ["derive"]}
chrono = { version = "0.4.40" }
dashmap = { version = "6.1.0", features = ["serde"] }
dotenvy = { version = "0.15.0" }
futures-util = { version = "0.3.31" }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.139" }
tokio = { version = "1.41.1", features = ["full"] }
tokio-tungstenite = { version = "0.26.2" }
uuid = { version = "1.13.1", features = ["v4", "serde"] }
